--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 	<title>natalimade</title>
 	<meta charset="utf-8">
 	<!--Import Google Icon Font-->
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="css/font-google.css" rel="stylesheet" type="text/css" />
+	<!-- Font Awesome CSS -->
+	<link href="css/font-awesome.css" rel="stylesheet" type="text/css" />
+	<script src="https://use.fontawesome.com/5fd47dfed9.js"></script>
+	
 	<!--Import materialize.css-->
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<!-- CSS -->
 	<link href="css/stylee.css" rel="stylesheet" type="text/css" /> 
 
-	<!-- Font Awesome CSS -->
-	<link href="css/font-awesome.css" rel="stylesheet" type="text/css" />
-	<script src="https://use.fontawesome.com/5fd47dfed9.js"></script>
 	<link rel="stylesheet" type="text/css" href="http://owlgraphic.com/owlcarousel/owl-carousel/owl.carousel.css"/>
 	<link rel="stylesheet" type="text/css" href="http://owlgraphic.com/owlcarousel/owl-carousel/owl.theme.css"/>
 	
