--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <title>natalimade</title>
     <meta charset="utf-8">
     <!--Import Google Icon Font-->
-    <link href="http://localhost/coursera/natalimade/css/font-google.css" rel="stylesheet" type="text/css"/>
+    <link href="css/font-google.css" rel="stylesheet" type="text/css"/>
 
-    <link href="http://localhost/coursera/natalimade/css/stylee.css" rel="stylesheet" type="text/css"/>
+    <link href="css/stylee.css" rel="stylesheet" type="text/css"/>
     <!-- Font Awesome CSS -->
-    <link href="http://localhost/coursera/natalimade/css/font-awesome.css" rel="stylesheet" type="text/css"/>
+    <link href="css/font-awesome.css" rel="stylesheet" type="text/css"/>
     <script src="https://use.fontawesome.com/5fd47dfed9.js"></script>
 
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="http://localhost/coursera/natalimade/css/materialize.css" media="screen,projection"/>
-    <link rel="stylesheet" type="text/css" href="http://localhost/coursera/natalimade/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="http://localhost/coursera/natalimade/css/flaticon.css"/>
+    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/flaticon.css"/>
     <!-- CSS -->
 
     <link href="https://fonts.googleapis.com/css?family=Rancho" rel="stylesheet">
@@ -43,7 +43,7 @@
             <div class="row">
               <div class="col s4 logoimg">
                 <a href="#">
-                  <img src="http://localhost/coursera/natalimade/img/Needle4.jpg">
+                  <img src="img/Needle4.jpg">
                   <h1>NataliMade </h1>
                 </a>
               </div>
@@ -73,28 +73,28 @@
         <div class="slider">
           <ul class="slides">
             <li>
-              <img src="http://localhost/coursera/natalimade/img/716.jpg"> <!-- random image -->
+              <img src="img/716.jpg"> <!-- random image -->
               <div class="caption center-align">
                 <h3>Индивидуальный подход!</h3>
                 <h5 class="light grey-text text-lighten-3">С творческим вдохновением.</h5>
               </div>
             </li>
             <li>
-              <img src="http://localhost/coursera/natalimade/img/roll.jpg"> <!-- random image -->
+              <img src="img/roll.jpg"> <!-- random image -->
               <div class="caption left-align">
                 <h3>Только последние новинки!</h3>
                 <h5 class="light grey-text text-lighten-3">Всегда стильно и модно.</h5>
               </div>
             </li>
             <li>
-              <img src="http://localhost/coursera/natalimade/img/pattern2.jpg"> <!-- random image -->
+              <img src="img/pattern2.jpg"> <!-- random image -->
               <div class="caption right-align">
                 <h3>Полный комплекс работ</h3>
                 <h5 class="light grey-text text-lighten-3">Гарантия результата</h5>
               </div>
             </li>
             <li>
-              <img src="http://localhost/coursera/natalimade/img/pattern.jpg"> <!-- random image -->
+              <img src="img/pattern.jpg"> <!-- random image -->
               <div class="caption center-align">
                 <h3>Добавь красок в свой интерьер!</h3>
                 <h5 class="light grey-text text-lighten-3">Живи комфортно.</h5>
@@ -114,9 +114,9 @@
                 <li class="bold"><a class="collapsible-header  waves-effect waves-light">Дизайн Интерьера</a>
                   <div class="collapsible-body">
                     <ul>
-                      <li><a href="http://localhost/coursera/natalimade/category/decor/shtory">Портьеры</a>
+                      <li><a href="category/decor/shtory">Портьеры</a>
                       </li>
-                      <li><a href="http://localhost/coursera/natalimade/category/decor/shtory">Тюль</a>
+                      <li><a href="category/decor/shtory">Тюль</a>
                       </li>
                       <li><a href="grid.html">Декоратииные подушки</a></li>
                     </ul>
@@ -223,7 +223,7 @@
               <div class="col l6 m6 sm12">
                 <div class="card medium">
                   <div class="card-image">
-                    <img src="http://localhost/coursera/natalimade/img/podushki.jpeg">
+                    <img src="img/podushki.jpeg">
                     <!--                    <span class="card-title">Домашний текстиль</span>-->
                   </div>
                   <div class="card-content">
@@ -237,7 +237,7 @@
               <div class="col l6 m6 sm12">
                 <div class="card medium">
                   <div class="card-image">
-                    <img src="http://localhost/coursera/natalimade/img/Villa-Sao-Paulo-Wedding-Venue-3.jpg">
+                    <img src="img/Villa-Sao-Paulo-Wedding-Venue-3.jpg">
                     <!--                    <span class="card-title">Декоративные подушки</span>-->
                   </div>
                   <div class="card-content">
@@ -251,7 +251,7 @@
               <div class="col l6 m6 sm12">
                 <div class="card medium">
                   <div class="card-image">
-                    <img src="http://localhost/coursera/natalimade/img/Prettychildhood.jpg">
+                    <img src="img/Prettychildhood.jpg">
                     <!--                    <span class="card-title">Гаммаки</span>-->
                   </div>
                   <div class="card-content">
@@ -265,7 +265,7 @@
               <div class="col l6 m6 sm12">
                 <div class="card medium">
                   <div class="card-image">
-                    <img src="http://localhost/coursera/natalimade/img/kitchen-textiles.jpg">
+                    <img src="img/kitchen-textiles.jpg">
                     <!--                    <span class="card-title">Ресторанный текстиль</span>-->
                   </div>
                   <div class="card-content">
@@ -295,16 +295,16 @@
 
               <div class="frame" id="basic">
                 <ul class="clearfix">
-                  <li><img src="http://localhost/coursera/natalimade/img/krasota-v-kuhni.jpg" alt=" кухонный текстиль"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/curtainsleaf.jpg" alt="занавески"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/Klassicheskaya-tyul.jpg" alt="детская комната"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/triangle.jpg" alt=" детские игрушки"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/floor-pillow-cushions-09.jpg" alt="декоративные подушки"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/bant.jpg" alt="седушки"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/fishtoy.jpg" alt="детские игрушки"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/kuhonnyj-tekstil.jpg" alt="кухонный текстиль"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/studio-g-fabrics.jpg" alt="детские игрушки"></li>
-                  <li><img src="http://localhost/coursera/natalimade/img/meshok.jpg" alt="детская комната"></li>
+                  <li><img src="img/krasota-v-kuhni.jpg" alt=" кухонный текстиль"></li>
+                  <li><img src="img/curtainsleaf.jpg" alt="занавески"></li>
+                  <li><img src="img/Klassicheskaya-tyul.jpg" alt="детская комната"></li>
+                  <li><img src="img/triangle.jpg" alt=" детские игрушки"></li>
+                  <li><img src="img/floor-pillow-cushions-09.jpg" alt="декоративные подушки"></li>
+                  <li><img src="img/bant.jpg" alt="седушки"></li>
+                  <li><img src="img/fishtoy.jpg" alt="детские игрушки"></li>
+                  <li><img src="img/kuhonnyj-tekstil.jpg" alt="кухонный текстиль"></li>
+                  <li><img src="img/studio-g-fabrics.jpg" alt="детские игрушки"></li>
+                  <li><img src="img/meshok.jpg" alt="детская комната"></li>
                 </ul>
               </div>
 
@@ -499,8 +499,8 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://darsa.in/sly/examples/js/vendor/plugins.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js "></script>
-    <script type="text/javascript" src="http://localhost/coursera/natalimade/js/materialize.min.js"></script>
-    <script type="text/javascript" src="http://localhost/coursera/natalimade/js/custom.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
 
     <script>
       $(document).ready(function () {
