--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>natalimade</title>
     <meta charset="utf-8">
     <!--Import Google Icon Font-->
-    <link href="css/font-google.css" rel="stylesheet" type="text/css"/>
-
+    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/stylee.css" rel="stylesheet" type="text/css"/>
     <!-- Font Awesome CSS -->
     <link href="css/font-awesome.css" rel="stylesheet" type="text/css"/>
