--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/flaticon.css"/>
+   
     <!-- CSS -->
 
     <link href="https://fonts.googleapis.com/css?family=Rancho" rel="stylesheet">
@@ -42,7 +43,7 @@
           <div class="nav-wrapper">
             <div class="row">
               <div class="col s4 logoimg">
-                <a href="#">
+                <a href="/coursera/natalimade/index.html">
                   <img src="img/needle4.jpg">
                   <h1>NataliMade </h1>
                 </a>
@@ -51,9 +52,9 @@
               <div class="col s8">
                 <ul class="right hide-on-med-and-down indigo-text">
                   <!--                  <li><i class="fa fa-mobile-phone fa-2x"></i></li>-->
-                  <li><a href="#" class="indigo-text text-lighten-1">Портфолио</a></li>
-                  <li><a href="#" class="indigo-text text-lighten-1">Обо мне</a></li>
-                  <li><a href="#" class="indigo-text text-lighten-1">Контакты</a></li>
+                  <li><a href="/coursera/natalimade/portfolio.html" class="indigo-text text-lighten-1">Портфолио</a></li>
+                  <li><a href="/coursera/natalimade/about_me.html" class="indigo-text text-lighten-1">Обо мне</a></li>
+                  <li><a href="/coursera/natalimade/contacts.html" class="indigo-text text-lighten-1">Контакты</a></li>
                   <!--                  <!-- Dropdown Trigger -->
                   <!--                  <li style="width:15px hight:15px">-->
                   <!--                    <a href="path/to/shopping/cart" class="btn btn-primary" aria-label="View 3 items in your shopping cart">-->
@@ -369,7 +370,7 @@
                 <div class="box2">
                   <div class="box">
                     <div class="flaticon">
-                      <i class="flaticon-sewing"></i>
+                      <i class="flaticon-classic-sewing-machine-with-spool-of-thread"></i>
                     </div>
                     <div>
                       <!--                      <button class="btn waves-effect waves-light btn-large" type="submit" name="action">Заказать сейчас-->
@@ -377,7 +378,7 @@
                       <!--                      </button>-->
                       <ul>
 
-                        <li>Качественное выполнение заказа в срок</li>
+                        <li>Гарантия качественного выполнения работ</li>
                       </ul>
                     </div>
                   </div>
@@ -408,7 +409,7 @@
                 <div class="box4">
                   <div class="box">
                     <div class="flaticon">
-                      <i class="flaticon-present"></i>
+                      <i class="flaticon-box"></i>
                     </div>
                     <div>
                       <!--                      <button class="btn waves-effect waves-light btn-large" type="submit" name="action">Заказать сейчас-->
@@ -487,7 +488,7 @@
         <div class="footer-copyright">
           <div class="container">
             © 2016 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">Вверх</a>
+            <a class="grey-text text-lighten-4 right" href="/coursera/natalimade/index.html">Вверх</a>
           </div>
         </div>
 
