--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="nav-wrapper">
             <div class="row">
               <div class="col s4 logoimg">
-                <a href="/coursera/natalimade/index.html">
+                <a href="/index.html">
                   <img src="img/needle4.jpg">
                   <h1>NataliMade </h1>
                 </a>
@@ -52,9 +52,9 @@
               <div class="col s8">
                 <ul class="right hide-on-med-and-down indigo-text">
                   <!--                  <li><i class="fa fa-mobile-phone fa-2x"></i></li>-->
-                  <li><a href="/coursera/natalimade/portfolio.html" class="indigo-text text-lighten-1">Портфолио</a></li>
-                  <li><a href="/coursera/natalimade/about_me.html" class="indigo-text text-lighten-1">Обо мне</a></li>
-                  <li><a href="/coursera/natalimade/contacts.html" class="indigo-text text-lighten-1">Контакты</a></li>
+                  <li><a href="/portfolio.html" class="indigo-text text-lighten-1">Портфолио</a></li>
+                  <li><a href="/about_me.html" class="indigo-text text-lighten-1">Обо мне</a></li>
+                  <li><a href="/contacts.html" class="indigo-text text-lighten-1">Контакты</a></li>
                   <!--                  <!-- Dropdown Trigger -->
                   <!--                  <li style="width:15px hight:15px">-->
                   <!--                    <a href="path/to/shopping/cart" class="btn btn-primary" aria-label="View 3 items in your shopping cart">-->
@@ -488,7 +488,7 @@
         <div class="footer-copyright">
           <div class="container">
             © 2016 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="/coursera/natalimade/index.html">Вверх</a>
+            <a class="grey-text text-lighten-4 right" href="/index.html">Вверх</a>
           </div>
         </div>
 
@@ -500,8 +500,8 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://darsa.in/sly/examples/js/vendor/plugins.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js "></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/js/custom.js"></script>
 
     <script>
       $(document).ready(function () {
