--- a/portfolio.html
+++ b/portfolio.html
@@ -6,15 +6,15 @@
     <!--Import Google Icon Font-->
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="http://localhost/coursera/natalimade/css/stylee.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/stylee.css" rel="stylesheet" type="text/css"/>
     <!-- Font Awesome CSS -->
-    <link href="http://localhost/coursera/natalimade/css/font-awesome.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/font-awesome.css" rel="stylesheet" type="text/css"/>
     <script src="https://use.fontawesome.com/5fd47dfed9.js"></script>
 
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="http://localhost/coursera/natalimade/css/materialize.css" media="screen,projection"/>
-    <link rel="stylesheet" type="text/css" href="http://localhost/coursera/natalimade/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="http://localhost/coursera/natalimade/css/flaticon.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen,projection"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/flaticon.css"/>
     <!-- CSS -->
 
     <link href="https://fonts.googleapis.com/css?family=Rancho" rel="stylesheet">
@@ -42,8 +42,8 @@
           <div class="nav-wrapper">
             <div class="row">
               <div class="col s4 logoimg">
-                <a href="/coursera/natalimade/index.html">
-                  <img src="http://localhost/coursera/natalimade/img/Needle4.jpg">
+                <a href="/index.html">
+                  <img src="/img/Needle4.jpg">
                   <h1>NataliMade </h1>
                 </a>
               </div>
@@ -51,9 +51,9 @@
               <div class="col s8">
                 <ul class="right hide-on-med-and-down indigo-text">
                   <!--                  <li><i class="fa fa-mobile-phone fa-2x"></i></li>-->
-                  <li><a href="/coursera/natalimade/portfolio.html" class="indigo-text text-lighten-1">Портфолио</a></li>
-                  <li><a href="/coursera/natalimade/about_me.html" class="indigo-text text-lighten-1">Обо мне</a></li>
-                  <li><a href="/coursera/natalimade/contacts.html" class="indigo-text text-lighten-1">Контакты</a></li>
+                  <li><a href="/portfolio.html" class="indigo-text text-lighten-1">Портфолио</a></li>
+                  <li><a href="/about_me.html" class="indigo-text text-lighten-1">Обо мне</a></li>
+                  <li><a href="/contacts.html" class="indigo-text text-lighten-1">Контакты</a></li>
                   <!--                  <!-- Dropdown Trigger -->
                   <!--                  <li style="width:15px hight:15px">-->
                   <!--                    <a href="path/to/shopping/cart" class="btn btn-primary" aria-label="View 3 items in your shopping cart">-->
@@ -166,7 +166,7 @@
       <div class="footer-copyright">
         <div class="container">
           © 2016 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="/coursera/natalimade/contacts.html">Вверх</a>
+          <a class="grey-text text-lighten-4 right" href="/contacts.html">Вверх</a>
         </div>
       </div>
 
@@ -178,8 +178,8 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://darsa.in/sly/examples/js/vendor/plugins.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js "></script>
-    <script type="text/javascript" src="http://localhost/coursera/natalimade/js/materialize.min.js"></script>
-    <script type="text/javascript" src="http://localhost/coursera/natalimade/js/custom.js"></script>
+    <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/js/custom.js"></script>
 
     <script>
       $(document).ready(function () {
