--- a/contacts.html
+++ b/contacts.html
@@ -43,7 +43,7 @@
             <div class="row">
               <div class="col s4 logoimg">
                 <a href="index.html">
-                  <img src="img/Needle4.jpg">
+                  <img src="img/needle4.jpg">
                   <h1>NataliMade </h1>
                 </a>
               </div>
